--- a/Spam.ipynb
+++ b/Spam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "14Si-9EazwlNTpMArLwhp_UbQeUg2jztw",
-      "authorship_tag": "ABX9TyM63b1qg7jvSc28SGtE+2di",
+      "authorship_tag": "ABX9TyNJZqrZ8oTmR4fDFGhTMlhJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,7 +118,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oVIcw1TKsFwn",
-        "outputId": "5c676a96-c61a-432e-f655-f89b809b40fc"
+        "outputId": "30a33974-e968-420c-cce3-4395d040fa2f"
       },
       "execution_count": null,
       "outputs": [
@@ -130,7 +130,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 10
         }
       ]
     },
@@ -157,7 +157,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TaU9cijjtCd5",
-        "outputId": "176e9dc1-717c-4c92-b9d2-63e176c1f4dc"
+        "outputId": "68798395-356a-4a3d-fa59-451d4ded981b"
       },
       "execution_count": null,
       "outputs": [
@@ -166,9 +166,9 @@
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
             "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt_tab is already up-to-date!\n"
+            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
           ]
         },
         {
@@ -179,7 +179,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 67
+          "execution_count": 12
         }
       ]
     },
@@ -227,7 +227,7 @@
           "height": 320
         },
         "id": "_z_wJZLkMqm3",
-        "outputId": "737ca92a-c8a7-41a2-8627-a8406c37e24e"
+        "outputId": "ee738b2d-f472-49a8-c753-c923349756d9"
       },
       "execution_count": null,
       "outputs": [
@@ -247,7 +247,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-88c8ae9e-068c-45c9-a449-04c4f6f2acc3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e8d92ddf-0e85-42f4-9362-bdd299f7ca6f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -335,7 +335,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-88c8ae9e-068c-45c9-a449-04c4f6f2acc3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e8d92ddf-0e85-42f4-9362-bdd299f7ca6f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -387,12 +387,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-88c8ae9e-068c-45c9-a449-04c4f6f2acc3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e8d92ddf-0e85-42f4-9362-bdd299f7ca6f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-88c8ae9e-068c-45c9-a449-04c4f6f2acc3');\n",
+              "        const element = document.querySelector('#df-e8d92ddf-0e85-42f4-9362-bdd299f7ca6f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -412,8 +412,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-03f922ac-8e72-4d58-bed0-c79271cd19bb\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-03f922ac-8e72-4d58-bed0-c79271cd19bb')\"\n",
+              "<div id=\"df-c83fcd18-42d9-46f4-95c1-b432ac9a32a6\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c83fcd18-42d9-46f4-95c1-b432ac9a32a6')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -532,7 +532,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-03f922ac-8e72-4d58-bed0-c79271cd19bb button');\n",
+              "        document.querySelector('#df-c83fcd18-42d9-46f4-95c1-b432ac9a32a6 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -548,7 +548,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 71
+          "execution_count": 16
         }
       ]
     },
@@ -633,7 +633,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2O7ETnNcQps6",
-        "outputId": "7c098b34-09c1-4268-938d-c4a1da976f82"
+        "outputId": "290c5e0a-d649-4a60-980f-b47d7f9223f4"
       },
       "execution_count": null,
       "outputs": [
@@ -644,7 +644,7 @@
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
             "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ]
         }
       ]
@@ -744,7 +744,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jq9FiZqHWsJw",
-        "outputId": "408a21aa-b2e5-44d9-b889-f83aa081de9e"
+        "outputId": "c3a65e24-e90a-4746-b0b2-8752becbf104"
       },
       "execution_count": null,
       "outputs": [
@@ -778,7 +778,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1s-AAwaVXKlk",
-        "outputId": "9521b796-4e52-4f0f-96ab-c0b8efab9594"
+        "outputId": "37a6793a-cfcb-4a67-ddc0-97716b2e5c04"
       },
       "execution_count": null,
       "outputs": [
@@ -814,7 +814,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dZF8pIzLXN29",
-        "outputId": "e4e0614e-afe9-4e2a-d50c-2b9fff78a613"
+        "outputId": "60b61deb-5cb8-4f93-e34e-5dfcd165a707"
       },
       "execution_count": null,
       "outputs": [
@@ -845,6 +845,237 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_sms = \"\"\n",
+        "transformed_sms = transform_text(input_sms)\n",
+        "vector_input = tfidf.transform([transformed_sms])\n",
+        "vector_input"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZDva9oPKvlvm",
+        "outputId": "c0ccc916-7c07-4cec-f297-55655ddc8075"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<1x3000 sparse matrix of type '<class 'numpy.float64'>'\n",
+              "\twith 0 stored elements in Compressed Sparse Row format>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = mnb.predict(vector_input)[0]"
+      ],
+      "metadata": {
+        "id": "kryV8lhlxNd0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def prediction(text):\n",
+        "    input_sms = \"\"\n",
+        "    transformed_sms = transform_text(input_sms)\n",
+        "    vector_input = tfidf.transform([transformed_sms])\n",
+        "    result = mnb.predict(vector_input)[0]\n",
+        "    if result==0:        print(\"not spam\")\n",
+        "    else:\n",
+        "        print(\"spam\")"
+      ],
+      "metadata": {
+        "id": "zpEoF03Yyftg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prediction(\"Your PayPal account has been suspended. Verify your details immediately\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z3av8m39Gs_3",
+        "outputId": "86ae0496-8952-48fe-94bf-05664e0bc244"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "not spam\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# New set of sample emails (spam = 1, ham = 0)\n",
+        "emails = [\n",
+        "    # SPAM Emails\n",
+        "    (\"Win a brand new iPhone! Click the link to enter the contest now.\", 1),\n",
+        "    (\"Your PayPal account has been suspended. Verify your details immediately.\", 1),\n",
+        "    (\"Act now! Get 90% off on all products for the next 24 hours.\", 1),\n",
+        "    (\"You've been pre-approved for a $10,000 loan. No credit check required.\", 1),\n",
+        "    (\"Exclusive offer just for you! Get free Bitcoin by signing up today.\", 1),\n",
+        "    (\"Hi, I'm a prince from Nigeria, and I need your help transferring $1 million.\", 1),\n",
+        "    (\"Urgent: Your social security number has been compromised. Call now!\", 1),\n",
+        "    (\"Special promo: Subscribe today and get lifetime access for free.\", 1),\n",
+        "    (\"Increase your followers instantly! Buy 10,000 followers for only $5.\", 1),\n",
+        "    (\"Final reminder: Your car warranty is about to expire. Renew now!\", 1),\n",
+        "\n",
+        "    # HAM Emails\n",
+        "    (\"Hey, can you send me the notes from yesterday’s lecture?\", 0),\n",
+        "    (\"Your Amazon order has been shipped and will arrive soon.\", 0),\n",
+        "    (\"Reminder: Your electricity bill is due next week.\", 0),\n",
+        "    (\"The meeting has been moved to 2 PM. Let me know if that works.\", 0),\n",
+        "    (\"Can you review the document and share your feedback?\", 0),\n",
+        "    (\"Happy birthday! Hope you have a fantastic day ahead.\", 0),\n",
+        "    (\"Let's schedule a call for tomorrow morning.\", 0),\n",
+        "    (\"Looking forward to catching up this weekend!\", 0),\n",
+        "    (\"Your flight has been rescheduled. Please check your email for details.\", 0),\n",
+        "    (\"The code implementation looks good. Just a few minor fixes needed.\", 0)\n",
+        "]\n",
+        "\n",
+        "# Function to check correctness\n",
+        "def evaluate_model(prediction_function):\n",
+        "    correct = 0\n",
+        "    total = len(emails)\n",
+        "\n",
+        "    for email, actual_label in emails:\n",
+        "        predicted_label = 1 if prediction_function(email) == \"Spam\" else 0\n",
+        "        is_correct = \"✅ Correct\" if predicted_label == actual_label else \"❌ Wrong\"\n",
+        "\n",
+        "        print(f\"Email: {email}\")\n",
+        "        print(f\"Predicted: {'Spam' if predicted_label else 'Ham'} | Actual: {'Spam' if actual_label else 'Ham'} | {is_correct}\\n\")\n",
+        "\n",
+        "        correct += (predicted_label == actual_label)\n",
+        "\n",
+        "    accuracy = (correct / total) * 100\n",
+        "    print(f\"Model Accuracy: {accuracy:.2f}%\")\n",
+        "\n",
+        "# Run evaluation\n",
+        "evaluate_model(prediction)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XQPsq9xZGY-e",
+        "outputId": "c7ac178a-ad29-4d3f-cfb0-5992f633b460"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "not spam\n",
+            "Email: Win a brand new iPhone! Click the link to enter the contest now.\n",
+            "Predicted: Ham | Actual: Spam | ❌ Wrong\n",
+            "\n",
+            "not spam\n",
+            "Email: Your PayPal account has been suspended. Verify your details immediately.\n",
+            "Predicted: Ham | Actual: Spam | ❌ Wrong\n",
+            "\n",
+            "not spam\n",
+            "Email: Act now! Get 90% off on all products for the next 24 hours.\n",
+            "Predicted: Ham | Actual: Spam | ❌ Wrong\n",
+            "\n",
+            "not spam\n",
+            "Email: You've been pre-approved for a $10,000 loan. No credit check required.\n",
+            "Predicted: Ham | Actual: Spam | ❌ Wrong\n",
+            "\n",
+            "not spam\n",
+            "Email: Exclusive offer just for you! Get free Bitcoin by signing up today.\n",
+            "Predicted: Ham | Actual: Spam | ❌ Wrong\n",
+            "\n",
+            "not spam\n",
+            "Email: Hi, I'm a prince from Nigeria, and I need your help transferring $1 million.\n",
+            "Predicted: Ham | Actual: Spam | ❌ Wrong\n",
+            "\n",
+            "not spam\n",
+            "Email: Urgent: Your social security number has been compromised. Call now!\n",
+            "Predicted: Ham | Actual: Spam | ❌ Wrong\n",
+            "\n",
+            "not spam\n",
+            "Email: Special promo: Subscribe today and get lifetime access for free.\n",
+            "Predicted: Ham | Actual: Spam | ❌ Wrong\n",
+            "\n",
+            "not spam\n",
+            "Email: Increase your followers instantly! Buy 10,000 followers for only $5.\n",
+            "Predicted: Ham | Actual: Spam | ❌ Wrong\n",
+            "\n",
+            "not spam\n",
+            "Email: Final reminder: Your car warranty is about to expire. Renew now!\n",
+            "Predicted: Ham | Actual: Spam | ❌ Wrong\n",
+            "\n",
+            "not spam\n",
+            "Email: Hey, can you send me the notes from yesterday’s lecture?\n",
+            "Predicted: Ham | Actual: Ham | ✅ Correct\n",
+            "\n",
+            "not spam\n",
+            "Email: Your Amazon order has been shipped and will arrive soon.\n",
+            "Predicted: Ham | Actual: Ham | ✅ Correct\n",
+            "\n",
+            "not spam\n",
+            "Email: Reminder: Your electricity bill is due next week.\n",
+            "Predicted: Ham | Actual: Ham | ✅ Correct\n",
+            "\n",
+            "not spam\n",
+            "Email: The meeting has been moved to 2 PM. Let me know if that works.\n",
+            "Predicted: Ham | Actual: Ham | ✅ Correct\n",
+            "\n",
+            "not spam\n",
+            "Email: Can you review the document and share your feedback?\n",
+            "Predicted: Ham | Actual: Ham | ✅ Correct\n",
+            "\n",
+            "not spam\n",
+            "Email: Happy birthday! Hope you have a fantastic day ahead.\n",
+            "Predicted: Ham | Actual: Ham | ✅ Correct\n",
+            "\n",
+            "not spam\n",
+            "Email: Let's schedule a call for tomorrow morning.\n",
+            "Predicted: Ham | Actual: Ham | ✅ Correct\n",
+            "\n",
+            "not spam\n",
+            "Email: Looking forward to catching up this weekend!\n",
+            "Predicted: Ham | Actual: Ham | ✅ Correct\n",
+            "\n",
+            "not spam\n",
+            "Email: Your flight has been rescheduled. Please check your email for details.\n",
+            "Predicted: Ham | Actual: Ham | ✅ Correct\n",
+            "\n",
+            "not spam\n",
+            "Email: The code implementation looks good. Just a few minor fixes needed.\n",
+            "Predicted: Ham | Actual: Ham | ✅ Correct\n",
+            "\n",
+            "Model Accuracy: 50.00%\n"
+          ]
+        }
+      ]
     }
   ]
 }
